@@ -39,6 +39,7 @@ skip_missing_interpreters = true
 skipsdist = false
 
 [testenv]
+passenv = CONFIG_SUPPORT_TOKEN_ENV
 whitelist_externals = echo
 deps = echo
 commands =
